--- a/www/stylesheets/style.css
+++ b/www/stylesheets/style.css
@@ -5,7 +5,7 @@ body {
 	font-size:14px;
 	background-color:#fff;
 	color:#000;
-	overflow-x:hidden;
+	overflow:hidden;
 }
 
 .FactoryWindow {
@@ -357,6 +357,38 @@ body {
 	font-size:16px;
 }
 
+#helpDialog {
+	display: none;	
+}
+
+.Help
+{
+	height: 34px;
+	width: 34px;
+	background-color:#EFEFEF;
+	opacity:0.75;
+	position: fixed;
+	right: 1px;
+	bottom: 40px;
+	border-radius:2px;
+	padding: 5px 2px 0px 0px;
+	display: block;
+	z-index:2;
+	font-size: 24px;
+	text-align: center;
+
+	box-shadow: 0 1px 2px 2px rgba(0,0,0,0.1);
+	-o-box-shadow: 0 1px 2px 2px rgba(0,0,0,0.1);
+	-ms-box-shadow: 0 1px 2px 2px rgba(0,0,0,0.1);
+	-moz-box-shadow: 0 1px 2px 2px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 1 5px 2px 2px rgba(0,0,0,0.1);
+	
+	-moz-user-select: none; 
+    -khtml-user-select: none; 
+    -webkit-user-select: none; 
+    -o-user-select: none; 
+}
+
 .MoveMenu
 {
 	height: 34px;
@@ -367,7 +399,7 @@ body {
 	right: 1px;
 	bottom: 1px;
 	border-radius:2px;
-	pading-right:2px;
+	padding-right:2px;
 	display: none;
 	z-index:2;
 
@@ -574,6 +606,24 @@ body {
 	background-color: #BBB;
 }
 
+.UserMenuGroup {
+	position: absolute;
+	background-color: #F3F3F3;
+	font-size: 16px;
+	width:213px;
+	z-index:1;
+}
+
+.UserMenuGroup li{
+	border-bottom: 1px solid #979797;
+	padding: 7px;
+	margin: 1px;
+}
+
+.UserMenuGroup li:hover{
+	background-color: #BBB;
+}
+
 #fileMenu{
 	padding:2px;
 	font-size:16px;
@@ -776,7 +826,7 @@ table.dataTable tfoot td {
 	padding:10px;
 	padding-right:23px;
 	text-align:right;
-	font-size:20px;
+	font-size:13px;
 	direction: rtl;
 }
 
@@ -787,7 +837,7 @@ table.dataTable tfoot td {
 	padding:10px;
 	text-align:left;
 	margin-left:15px;
-	font-size:20px;
+	font-size:12px;
 }
 
 .ExeptionsTable {
