--- a/www/stylesheets/pages/flight.css
+++ b/www/stylesheets/pages/flight.css
@@ -1,6 +1,11 @@
 .FlightUploadingInputs {
-	margin-top:10px;
+	margin:10px 0px;
 	width:200px;
+}
+
+select.FlightUploadingInputs {
+	margin:10px 0px;
+	width:250px;
 }
 
 .FlightUploadingInputsAditionalInfo {
