--- a/stylesheets/pages/viewOptionsEvents.css
+++ b/stylesheets/pages/viewOptionsEvents.css
@@ -36,7 +36,8 @@
 
 .container__events-list {
     overflow-y: auto;
-    height: 100%;
+    height:100%;
+    padding: 0px 5px 20px;
 }
 
 .content--no-scroll {
