Flight comment implemented
CREATE TABLE `flight_comments` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `comment` text NOT NULL,
  `commander-admitted` tinyint(1) NOT NULL,
  `aircraft-allowed` tinyint(1) NOT NULL,
  `general-admission` tinyint(1) NOT NULL,
  `id_flight` int(11) NOT NULL,
  `id_user` int(11) NOT NULL,
  `dt` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (`id`),
  KEY `id_flight` (`id_flight`),
  KEY `id_user` (`id_user`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8

--- a/stylesheets/pages/flight.css
+++ b/stylesheets/pages/flight.css
@@ -230,8 +230,16 @@ select.FlightUploadingInputs {
     -o-user-select: none;
 }
 
-.JstreeContentItemFolder:hover, .JstreeContentItemFlight:hover {
+.JstreeContentItemFlight.is-analyzed {
+    background-color: #394c5a;
+}
+
+.JstreeContentItemFolder:hover, .JstreeContentItemFlight:not(.is-analyzed):hover {
     background-color: #c0c0c0 !important;
+}
+
+.JstreeContentItemFlight.is-analyzed:hover {
+    background-color: #26343e;
 }
 
 .ItemsCheckJstreeContent {
