--- a/stylesheets/pages/calibration.css
+++ b/stylesheets/pages/calibration.css
@@ -2,7 +2,7 @@
     margin-left: 20px;
 }
 
-#calibration-creation-form {
+#calibration-edit-form {
     width: 100%;
     text-align: center;
 }
@@ -35,7 +35,7 @@
     padding: 5px 0px;
 }
 
-.calibration-creation-form .row {
+.calibration-edit-form .row {
     width: 100%;
     clear:both;
 }
