--- a/front/components/flights-top-menu/flights-top-menu.sass
+++ b/front/components/flights-top-menu/flights-top-menu.sass
@@ -1,67 +1,40 @@
 .flights-top-menu
-    width: 100%
-    min-height: 45px
+    width: calc(100% + 2px)
+    margin: 0 -1px 0 0
+    border-radius: 0px
     background-color: #063a5c
-    box-shadow: 0 3px 10px 5px rgba(0,0,0,0.15)
+    box-shadow: 0 1px 10px 3px rgba(0,0,0,0.15)
     z-index: 2
 
-    &__col-no-padding
-        padding: 0px
+    & a
+        color: #fff !important
 
-    &__btn
-        display: table
-        padding: 0px 4px
-        border-radius: 3px
+    & a.is-hoverable:hover
+        background-color: #021e30 !important
 
-    &__btn.is-hoverable:hover
-        background-color: #021e30
+    & a.is-hoverable:visited,
+    & a.is-hoverable:active,
+    & a.is-hoverable:focus
+        background-color: #063a5c
 
-    &__btn.is-aligned-right
-        margin-right: 0px
-        margin-left: auto
+    & a.is-static,
+    & a.is-static:hover
+        background-color: #063a5c !important
+        cursor: default
 
-    &__ico
-        font-size: 40px
-        background-size: contain
-        background-repeat: no-repeat
-        background-position: center center
-        display: table-cell
-        vertical-align: middle
+    &__main-menu-toggle
+        font-size: 14px  !important
 
-    &__label
-        font-size: 24px
-        line-height: 43px
-        padding: 0px 8px 2px
-        color: #fff
-        display: table-cell
-        vertical-align: middle
+    &__icon-bar
+        background-color: #fff
 
-    &__label.is-hidden
-        display: none
+    &__navbar-brand
+        margin: 0 10px !important
+        font-weight: bold
 
-    &__ico:before
-        content: "\00a0"
+    &__dropdown-menu a
+        color: #333 !important
 
-    &__logo-ico
-        background-image: url(/front/stylesheets/basicImg/logo.png)
-
-    &__gliphicon
-        color: #fff
-        font-size: 28px
-        line-height: 40px
-        padding: 0px 4px
-        display: table-cell
-        vertical-align: middle
-
-    &__gliphicon-menu
-        font-size: 22px
-        padding-top: 1px
-        padding-bottom: 4px
-
-    &__gliphicon-config
-        padding-top: 3px
-        padding-bottom: 2px
-
-    &__gliphicon-logout
-        padding-top: 1px
-        padding-bottom: 4px
+    &__language-menu
+        min-width: 60px !important
+        left: -5px !important
