--- a/front/stylesheets/pages/flight.css
+++ b/front/stylesheets/pages/flight.css
@@ -198,8 +198,9 @@ select.FlightUploadingInputs {
 .JstreeContentItemFolder {
     height:25px;
     line-height:25px;
+    border-radius: 2px;
     padding:2px;
-    padding-left:5px;
+    padding-left:15px;
     font-size:16px;
     background-color:#FFD869;
 
@@ -214,9 +215,10 @@ select.FlightUploadingInputs {
 .JstreeContentItemFlight {
     height:25px;
     line-height:25px;
+    border-radius: 2px;
 
     padding:2px;
-    padding-left:5px;
+    padding-left:15px;
     font-size:16px;
     color:#fff;
     background-color:#439ADC;
@@ -240,6 +242,15 @@ select.FlightUploadingInputs {
 
 .ItemsCheckJstreeContent {
     vertical-align: text-bottom;
+}
+
+.ItemsCheck {
+    display: none;
+}
+
+.ItemsCheck.is-displayed {
+    display: inline-block;
+    padding-left: 5px;
 }
 
 .FlightTableCheckboxCenter {
