--- a/front/components/flights-top-menu/flights-top-menu.sass
+++ b/front/components/flights-top-menu/flights-top-menu.sass
@@ -1,6 +1,6 @@
 .flights-top-menu
     width: calc(100% + 2px)
-    margin: 0 -1px 0 0
+    margin: -1px 0 0
     border-radius: 0px
     background-color: #063a5c
     box-shadow: 0 1px 10px 3px rgba(0,0,0,0.15)
