--- a/front/stylesheets/pages/bruTypeTemplates.css
+++ b/front/stylesheets/pages/bruTypeTemplates.css
@@ -5,7 +5,7 @@
     width:100%;
     overflow-y:scroll;
     font-size:16px;
-    height:40%;
+    height:40% !important;
     margin:5px auto;
 }
 
