flightUploader with preview

--- a/front/components/flight-uploader-dropdown/flight-uploader-dropdown.sass
+++ b/front/components/flight-uploader-dropdown/flight-uploader-dropdown.sass
@@ -12,7 +12,10 @@
 
         &[type="text"]
             z-index: 1 !important
-            max-width: 120px
+            max-width: 140px
+
+    &__switch-label
+        margin-right: 10px
 
 .flight-uploader-dropdown.is-shown
     display: block
