Dummie uploading progress indicator

--- a/front/components/flights-top-menu/flights-top-menu.sass
+++ b/front/components/flights-top-menu/flights-top-menu.sass
@@ -6,6 +6,13 @@
     box-shadow: 0 1px 10px 3px rgba(0,0,0,0.15)
     z-index: 2
 
+    & li > span
+        position: relative
+        display: block
+        padding: 15px 15px
+        line-height: 20px
+        color: #fff
+
     & a
         color: #fff !important
 
