uploading indicator implemented

--- a/front/components/flight-uploading-progress-indicator/flight-uploader-progress-indicator.sass
+++ b/front/components/flight-uploading-progress-indicator/flight-uploader-progress-indicator.sass
@@ -1,10 +1,12 @@
 .flight-uploader-progress-indicator
-    width: 35px
-    padding-top: 7px
     visibility: hidden
 
-    & .isShown
-        visibility: visible
+    & .circular-progressbar
+        width: 35px
+        padding-top: 7px
+
+        &.is-shown
+            visibility: visible
 
     & .CircularProgressbar
         width: 100%
