--- a/front/stylesheets/pages/viewOptionsEvents.css
+++ b/front/stylesheets/pages/viewOptionsEvents.css
@@ -18,8 +18,8 @@
     max-height: 34px;
     font-weight: bold;
     border: 1px solid #999;
-    margin: 25px 6px 2px 6px;
-    padding: 5px;
+    margin: 2px 5px 2px 6px;
+    padding: 20px 5px;
     cursor: pointer;
 
     background: rgb(255,255,255); /* Old browsers */
