--- a/front/components/content-loader/content-loader.sass
+++ b/front/components/content-loader/content-loader.sass
@@ -1,12 +1,13 @@
-.flight-uploader-dropdown
+.content-loader
+    margin: 50px
 
     & &__loading
         margin: 0 auto
         border: 8px solid #f3f3f3
         border-top: 8px solid #3498db
         border-radius: 50%
-        width: 60px
-        height: 60px
+        width: 120px
+        height: 120px
         animation: spin 2s linear infinite
 
 @keyframes spin
