--- a/front/components/flight-importer-dropdown/flight-importer-dropdown.sass
+++ b/front/components/flight-importer-dropdown/flight-importer-dropdown.sass
@@ -6,5 +6,13 @@
     & a:hover
         background-color: #fff !important
 
+    & input
+        &[type="file"]
+            z-index: 2 !important
+
+        &[type="text"]
+            z-index: 1 !important
+            max-width: 140px
+
 .flight-importer-dropdown.is-shown
     display: block
