--- a/front/stylesheets/style.css
+++ b/front/stylesheets/style.css
@@ -6,7 +6,6 @@ body {
     font-size:14px;
     background-color:#fff;
     color:#000;
-    overflow-x:hidden;
 }
 
 body::scrollbar {
@@ -59,6 +58,7 @@ body::-webkit-scrollbar {
     width:100%;
     padding:5px;
     color:#676767;
+    overflow-y: auto;
 
     -moz-user-select: none;
     -khtml-user-select: none;
