--- a/front/stylesheets/style.css
+++ b/front/stylesheets/style.css
@@ -56,7 +56,6 @@ body::-webkit-scrollbar {
     border:none;
     float:left;
     width:100%;
-    padding:5px;
     color:#676767;
     overflow-y: auto;
 
@@ -85,9 +84,8 @@ body::-webkit-scrollbar {
 .Content, .ContentFullWidth, .ContentFullSize
 {
     border:none;
-    width: calc(100% - 10px);
-    padding:5px;
-    margin-top:5px;
+    width: 100%;
+    padding: 5px;
     color:#676767;
     overflow-y:auto;
 }
