--- a/front/controls/cyclo-params/item/item.sass
+++ b/front/controls/cyclo-params/item/item.sass
@@ -1,32 +1,47 @@
+@keyframes chooseAnimation
+    from
+        color: #333
+        background-color: #f9f9f9
+        border: 1px solid #efefef
+    to
+        color: #fff
+        background-color: #063a5c
+        border: 1px solid #555
+
 .cyclo-params-item
     position: relative
-    width: 100%
-    height: 55px
-    padding: 2px
-    float: left
-    margin: 2px
-    user-select: none
-    border: 1px solid #efefef
-    border-radius: 2px
-    background: #ffffff
-    background: linear-gradient(to bottom, #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%)
 
-    @media screen and (min-width: 480px)
-        width: calc(50% - 4px)
+    & &__box
+        color: #333
+        width: 100%
+        height: 55px
+        padding: 2px
+        float: left
+        margin: 2px
+        user-select: none
+        border: 1px solid #efefef
+        border-radius: 2px
+        background: #ffffff
+        background: linear-gradient(to bottom, #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%)
 
-    @media screen and (min-width:  768px)
-        width: calc(33% - 6px)
+        @media screen and (min-width: 480px)
+            width: calc(50% - 4px)
 
-    @media screen and (min-width:  992px)
-        width: calc(25% - 8px)
+        @media screen and (min-width:  768px)
+            width: calc(33% - 6px)
 
-    @media screen and (min-width:  1200px)
-        width: calc(20% - 10px)
+        @media screen and (min-width:  992px)
+            width: calc(25% - 8px)
 
-        &.is-chosen
-            color: #fff
-            background: rgb(1, 62, 101)
-            border: 1px solid #555
+        @media screen and (min-width:  1200px)
+            width: calc(20% - 10px)
+
+    &.is-chosen &__box
+        color: #fff
+        background: #063a5c
+        border: 1px solid #555
+        animation-name: chooseAnimation
+        animation-duration: 0.5s
 
     & &__colorbox
         width: 6px
