--- a/front/controls/cyclo-params/item/item.sass
+++ b/front/controls/cyclo-params/item/item.sass
@@ -10,33 +10,35 @@
 
 .cyclo-params-item
     position: relative
+    height: 55px
+    width: 100%
+    padding: 2px
+    float: left
+    margin: 2px
+    color: #333
+    user-select: none
+    border: 1px solid #efefef
+    border-radius: 2px
+    background: #ffffff
+    background: linear-gradient(to bottom, #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%)
+
+    @media screen and (min-width: 480px)
+        width: calc(50% - 4px)
+
+    @media screen and (min-width:  768px)
+        width: calc(33% - 6px)
+
+    @media screen and (min-width:  992px)
+        width: calc(25% - 8px)
+
+    @media screen and (min-width:  1200px)
+        width: calc(20% - 10px)
 
     & &__box
-        color: #333
+        height: 100%
         width: 100%
-        height: 55px
-        padding: 2px
-        float: left
-        margin: 2px
-        user-select: none
-        border: 1px solid #efefef
-        border-radius: 2px
-        background: #ffffff
-        background: linear-gradient(to bottom, #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%)
 
-        @media screen and (min-width: 480px)
-            width: calc(50% - 4px)
-
-        @media screen and (min-width:  768px)
-            width: calc(33% - 6px)
-
-        @media screen and (min-width:  992px)
-            width: calc(25% - 8px)
-
-        @media screen and (min-width:  1200px)
-            width: calc(20% - 10px)
-
-    &.is-chosen &__box
+    &.is-chosen
         color: #fff
         background: #063a5c
         border: 1px solid #555
