folder is_expannded added column

--- a/front/components/flights/flight-controls/flight-controls.sass
+++ b/front/components/flights/flight-controls/flight-controls.sass
@@ -1,9 +1,9 @@
 .flights-flight-controls
-    color: #444
+    color: #777
 
     &__glyphicon
         margin: 0 5px
         cursor: pointer
 
     &__glyphicon-danger
-        color: #613232
+        color: #9c6f6f
