--- a/front/components/flights/folder-controls/folder-controls.sass
+++ b/front/components/flights/folder-controls/folder-controls.sass
@@ -1,9 +1,19 @@
 .flights-folder-controls
     color: #777
 
-    &__glyphicon
+    & &__glyphicon
         margin: 0 5px
         cursor: pointer
 
-    &__glyphicon-danger
+    & &__glyphicon-danger
         color: #9c6f6f
+
+    & &__form
+        top: 5px
+        left: 0
+        position: absolute
+        z-index: 2
+        display: block
+
+    & &__form.is-hidden
+        display: none
