flightList chosen items

--- a/front/components/flights/flight-controls/flight-controls.sass
+++ b/front/components/flights/flight-controls/flight-controls.sass
@@ -7,3 +7,9 @@
 
     &__glyphicon-danger
         color: #9c6f6f
+
+.flights-tree__item.is-chosen .flights-flight-controls
+    color: #eee
+
+    &__glyphicon-danger
+        color: #eee
