--- a/front/controls/cyclo-params/item/item.sass
+++ b/front/controls/cyclo-params/item/item.sass
@@ -1,4 +1,4 @@
-@keyframes chooseAnimation
+@keyframes chooseParamAnimation
     from
         color: #333
         background-color: #f9f9f9
@@ -42,7 +42,7 @@
         color: #fff
         background: #063a5c
         border: 1px solid #555
-        animation-name: chooseAnimation
+        animation-name: chooseParamAnimation
         animation-duration: 0.5s
 
     & &__colorbox
