flight events componetn

--- a/front/components/flight-events/list/list.sass
+++ b/front/components/flight-events/list/list.sass
@@ -1,5 +1,5 @@
 .flight-events-list
-    &__not-processed
+    & &__not-processed
         width: 100%
         text-align: center
         color: #777
