events header color change

--- a/front/components/flight-events/content-header/content-header.sass
+++ b/front/components/flight-events/content-header/content-header.sass
@@ -2,7 +2,7 @@
     font-weight: bold
     border-bottom: 2px groove #bbb
     border-left: 2px groove #bbb
-    background-color: #4b718a
+    background-color: #173a61
     color: #eef
     border-radius: 2px
 
