--- a/front/containers/login/login.sass
+++ b/front/containers/login/login.sass
@@ -23,3 +23,11 @@
     & &__header
         padding-top: 5px
         font-size: 24px
+
+    & &__message-row
+        padding: 10px 0px
+        color: #6b0202
+        font-weight: bold
+
+    & &__message.is-hidden
+        display: none
