user create form

--- a/front/components/users-table/table/table.sass
+++ b/front/components/users-table/table/table.sass
@@ -1,3 +1,10 @@
 .users-table-table
     & &__logo
         width: 100%
+
+    & &__glyph-edit, & &__glyph-trash
+        cursor: pointer
+        padding: 5px
+
+    & &__glyph-trash
+        color: #9c6f6f
