--- a/front/components/chart/params-toggle/params-toggle.sass
+++ b/front/components/chart/params-toggle/params-toggle.sass
@@ -1,14 +1,10 @@
 .chart-params-toggle
     & &__strikethrough
-        position: relative
-
-    & &__strikethrough:before
         transform: rotate(-35deg)
         position: absolute
-        content: ""
-        left: 0
-        top: 50%
-        width: 57%
+        left: -30%
+        top: 40%
+        width: 171%
         right: 0
         border-top: 1px solid
         border-color: inherit
