--- a/front/components/login/form/form.sass
+++ b/front/components/login/form/form.sass
@@ -27,7 +27,7 @@
         @media screen and (min-width: 650px)
             width: 400px
             left: calc(50% - 240px)
-            top: 22%
+            top: 16%
 
     & &__row
         padding: 10px 40px
@@ -39,6 +39,7 @@
     & &__header-small
         font-size: 1.4em
         color: #333
+        padding: 0 10px
 
     & &__message-row
         padding: 10px 0px
