user creation form avaliable FDRs selector

--- a/front/components/user-form/form/form.sass
+++ b/front/components/user-form/form/form.sass
@@ -3,3 +3,7 @@
     & &__container
         width: 80%
         margin: 25px auto
+
+    & label.control-label
+        overflow: hidden
+        padding: 0
