--- a/front/components/user-form/form/form.sass
+++ b/front/components/user-form/form/form.sass
@@ -7,3 +7,7 @@
     & label.control-label
         overflow: hidden
         padding: 0
+
+    &__server-message
+        padding: 0 0 15px
+        text-align: center
