--- a/front/components/users-table/table/table.sass
+++ b/front/components/users-table/table/table.sass
@@ -2,9 +2,12 @@
     & &__logo
         width: 100%
 
-    & &__glyph-edit, & &__glyph-trash
+    & &__glyph-edit, & &__glyph-trash, & &__glyph-activity
         cursor: pointer
         padding: 5px
+
+    & &__glyph-edit
+        top: 0px
 
     & &__glyph-trash
         color: #9c6f6f
