--- a/front/controls/top-menu/flight-uploader-dropdown/flight-uploader-dropdown.sass
+++ b/front/controls/top-menu/flight-uploader-dropdown/flight-uploader-dropdown.sass
@@ -17,5 +17,10 @@
     &__switch-label
         margin-right: 10px
 
-.flight-uploader-dropdown.is-shown
-    display: block
+    &.is-disabled
+        pointer-events: none
+        color: #AAA
+        background: #F5F5F5
+
+    &.is-shown
+        display: block
