--- a/front/controls/fdr-selector/fdr-selector.sass
+++ b/front/controls/fdr-selector/fdr-selector.sass
@@ -1,7 +1,9 @@
 .fdr-selector
+    & a
+        padding: 11px 0 0 !important
 
     &__select
-        width: 100%
+        min-width: 220px
 
     & .select2-container
         min-width: 150px
