fileUploader proto style fix

--- a/front/components/calibration-form/form/form.sass
+++ b/front/components/calibration-form/form/form.sass
@@ -1,4 +1,4 @@
-.user-form-form
+.calibration-form-form
 
     & &__container
         width: 80%
@@ -7,7 +7,3 @@
     & label.control-label
         overflow: hidden
         padding: 0
-
-    &__server-message
-        padding: 0 0 15px
-        text-align: center
