--- a/front/components/users-table/table/table.sass
+++ b/front/components/users-table/table/table.sass
@@ -1,6 +1,8 @@
 .users-table-table
     & &__logo
         width: 100%
+        max-width: 40px
+        margin: 0 auto
 
     & &__glyph-edit, & &__glyph-trash, & &__glyph-activity
         cursor: pointer
