--- a/front/components/calibration-form/param/param.sass
+++ b/front/components/calibration-form/param/param.sass
@@ -1,3 +1,13 @@
 .calibration-form-param
+    border-bottom: 1px dotted #666
+    padding-bottom: 15px
+    margin-bottom: 35px
+
     & &__description
         padding: 5px 2px
+
+    & &__message
+        color: #d43f3a
+
+    & .is-hidden
+        display: none
