calibration CRUD complete

--- a/front/components/calibration-form/param/param.sass
+++ b/front/components/calibration-form/param/param.sass
@@ -1,5 +1,5 @@
 .calibration-form-param
-    border-bottom: 1px dotted #666
+    border-bottom: 1px dotted #aaa
     padding-bottom: 15px
     margin-bottom: 35px
 
