--- a/front/components/calibration-form/toolbar/toolbar.sass
+++ b/front/components/calibration-form/toolbar/toolbar.sass
@@ -1,5 +1,8 @@
-.calibrations-toolbar
+.calibration-form-toolbar
     margin: 0 0 2px
 
     & &__is-hidden
         visibility: hidden
+
+    & &__list-button
+        top: 0
