users only for admin role

--- a/front/controls/main-menu/main-menu.sass
+++ b/front/controls/main-menu/main-menu.sass
@@ -19,7 +19,7 @@
     -o-transition: height 1s ease-in-out
     transition: height 1s ease-in-out
 
-    &.is-hidden
+    &.is-hidden, & .is-hidden
         display: none
 
     &__row
