--- a/back/view/index.mustache
+++ b/back/view/index.mustache
@@ -2,6 +2,7 @@
 <html
     lang='{{languange}}'
     login='{{login}}'
+    role='{{role}}'
 >
 <head>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
