vertial toolbar complete

--- a/front/components/realtime-calibration/vertical-toolbar/vertical-toolbar.sass
+++ b/front/components/realtime-calibration/vertical-toolbar/vertical-toolbar.sass
@@ -12,6 +12,13 @@
 
     &__fdr-type
         list-style-type: none
+        padding: 5px 10px
 
     &__label
-        padding: 10px 0 5px 45px
+        padding: 10px 0 5px 25px
+
+    &__controll, &__button
+        padding: 5px 10px
+
+    & .select2-container
+        width: 100% !important
