--- a/front/components/realtime-calibration/vertical-toolbar/vertical-toolbar.sass
+++ b/front/components/realtime-calibration/vertical-toolbar/vertical-toolbar.sass
@@ -17,6 +17,18 @@
     &__label
         padding: 10px 0 5px 25px
 
+    &__checkbox
+        height: 18px
+        width: 20px
+        margin: 0 !important
+
+    &__inline-label-container
+        padding: 10px 0 5px 25px
+        display: flex
+
+    &__inline-label
+        flex: 1
+
     &__controll, &__button
         padding: 5px 10px
 
