--- a/front/components/realtime-calibration/vertical-toolbar/vertical-toolbar.sass
+++ b/front/components/realtime-calibration/vertical-toolbar/vertical-toolbar.sass
@@ -25,12 +25,14 @@
     &__inline-label-container
         padding: 10px 0 5px 25px
         display: flex
+        align-items: center
 
     &__inline-label
         flex: 1
 
     &__controll, &__button
         padding: 5px 10px
+        text-align: center
 
     & .select2-container
         width: 100% !important
