--- a/front/components/realtime-calibration/data-container/data-container.sass
+++ b/front/components/realtime-calibration/data-container/data-container.sass
@@ -6,3 +6,11 @@
 
     @media screen and (min-width: 768px)
         margin-left: -20px
+
+    & &__output
+        display: flex
+        flex-direction: column
+
+    & &__chart,
+    & &__params
+        flex: 1
