--- a/front/controls/dialog/dialog.sass
+++ b/front/controls/dialog/dialog.sass
@@ -7,7 +7,8 @@
     & .modal-dialog,
     & .modal-content
         height: 95%
-        width: 95%
+        width: 96%
+        left: 1%
 
     & .modal-body
         max-height: calc(100% - 120px)
