realtime binary output complete

--- a/front/components/realtime-calibration/tile-item/tile-item.sass
+++ b/front/components/realtime-calibration/tile-item/tile-item.sass
@@ -27,17 +27,9 @@
     height: 100%
     width: 100%
 
-  &.is-chosen
-    color: #fff
-    background: #063a5c
-    border: 1px solid #555
-    animation-name: chooseParamAnimation
-    animation-duration: 0.5s
-
-  & &__params-colorbox,
-  & &__binary-colorbox
+  & &__colorbox
     width: 8px
-    height: 80px
+    height: 77px
     padding: 2px
     float: left
     cursor: pointer
