save realtime calibration button

--- a/front/components/realtime-calibration/vertical-toolbar/vertical-toolbar.sass
+++ b/front/components/realtime-calibration/vertical-toolbar/vertical-toolbar.sass
@@ -3,26 +3,26 @@
   border: 1px solid #e7e7e7
   background-color: #f8f8f8
 
-  &__connection-params
+  & &__connection-params
     text-align: center
     font-size: 16px
     font-weight: bold
     width: 100%
     padding: 2px 0
 
-  &__fdr-type
+  & &__fdr-type
     list-style-type: none
     padding: 5px 10px
 
-  &__label
+  & &__label
     padding: 10px 0 5px 25px
 
-  &__checkbox
+  & &__checkbox
     height: 18px
     width: 20px
     margin: 0 !important
 
-  &__inline-label-container
+  & &__inline-label-container
     padding: 10px 0 5px 25px
     display: flex
     align-items: center
@@ -36,3 +36,6 @@
 
   & .select2-container
     width: 100% !important
+
+  & &__btn
+    padding: 2px 8px
