add realtime calibration chart btn

--- a/front/components/realtime-calibration/binary-tile-item/binary-tile-item.sass
+++ b/front/components/realtime-calibration/binary-tile-item/binary-tile-item.sass
@@ -48,6 +48,7 @@
     cursor: pointer
 
   & &__label
+    position: relative
     width: calc(100% - 8px)
     height: 80px
     padding: 2px
@@ -67,3 +68,10 @@
     overflow: hidden
     font-size: 10px
     line-height: 9px
+
+  & &__checkbox
+    position: absolute
+    cursor: pointer
+    top: 0
+    right: 3px
+    color: #526571
