--- a/front/components/realtime-calibration/timeline/timeline.sass
+++ b/front/components/realtime-calibration/timeline/timeline.sass
@@ -1,1 +1,6 @@
 .realtime-calibration-timeline
+  max-width: 100%
+  height: 50px
+  margin: 0
+  background: #f8f8f8
+  border-bottom: 1px solid #bbb
