highlight outboundary params

--- a/front/components/realtime-calibration/tile-item/tile-item.sass
+++ b/front/components/realtime-calibration/tile-item/tile-item.sass
@@ -36,6 +36,9 @@
       animation-name: chooseParamAnimation
       animation-duration: 0.5s
 
+    &--alert
+      color: #f00
+
   & &__colorbox
     width: 8px
     height: 77px
