--- a/front/components/calibrations/table/table.sass
+++ b/front/components/calibrations/table/table.sass
@@ -2,11 +2,14 @@
   & &__hidden
     display: none
 
-  & &__glyph-edit, & &__glyph-trash
+  & &__glyph-edit,
+  & &__glyph-export,
+  & &__glyph-trash
     cursor: pointer
     padding: 5px
 
-  & &__glyph-edit
+  & &__glyph-edit,
+  & &__glyph-export
     top: 0px
 
   & &__glyph-trash
